- Improved swap setting.
- Replaced /dev/md0 with xmd using LZ4 compression.
- Replaced the server certificate with 2048bits key and sha256 signature.
- Change iperf2.x for iperf3.
- Changed samba reload when changing the shares. (it takes few secs.)
- Changed rootfs layout. (2GB USB/CF is required. Full is 4GB or more.)
- Changed image files to use XZ.
- Changed net.inet.tcp.delayed_ack to 1.
- Drop SSLv3 support. (HTTPS must use TLS)
- Drop LiveCD mode support with less than 2GB memory. (install/upgrade only)
  Supported minimum spec except LiveCD is 512MB memory + 512MB swap device or partition.
  1024MB swap device or partition is recommended.
  File based swap and ZFS volume swap is not recommended.
- Add tcpdump.
- Add hostapd support. (wireless AP mode)
- Add WLAN virtual interface used for wireless device. (OPT only at this time)
- Add WebGUI access restriction.
- Add NFS support in HAST service.
- Add default swap of 512MB for LiveUSB and before user configuration.
- Adjust number of Status|Processes.
- Add MBR partition to LiveUSB.
- Add log/mirrored log support in Disks|ZFS|Pools|Tools.
- Add expires HTTP header. (some js must be force reloaded.)
- Add 10.1 bge driver & NAS4Free bge wol patch.
- Increase http upload size to 512MB.
- Remove last slash of the path added by filechooser.
- Add wait_on and spindown.
- Upgrade e2fsprogs to 1.42.12.
- Upgrade transmission to 2.84.
- Upgrade isboot to 0.2.8.
- Upgrade istgt to 20141125.
- Upgrade smartmontools 6.3
- Upgrade xmlstarlet to 1.6.1.
- Upgrade mDNSResponder to 561.1.1.
- Upgrade xmd to 0.4.2.
- Upgrade bash 4.3 to patch 33.
- Upgrade unison to 2.48.3.
- Upgrade netatalk to 3.1.7.
- Upgrade iperf3 to 3.0.11.
- Upgrade zoneinfo to 2015a.
- Upgrade inadyn-mt to 02.24.44.
- Upgrade php to 5.6.6.
- Upgrade samba to 4.1.17.

Fixes:
- FAT/NTFS mount does not use access restriction.
- Broken Wireless support.
- ZFS pool cache is not removed when deleting or reseting to factory default.